# TimetableMachine

./: Group.cpp  Group.h  Lesson.cpp  README.md  Subject.cpp  Subject.h  Timetable.h  data.csv  horarios.html  import.cpp  process.cpp
cpp/: CMakeLists.txt  Lesson.h  RawData.cpp  RawData.h  Time.cpp  Time.h  Timetable.cpp  export.cpp  import.cpp  process.cpp
html/: page.html  style.css
html/tables/: 1.html  10.html  100.html  1000.html  1001.html  1002.html  1003.html  1004.html  1005.html  1006.html  1007.html  1008.html  1009.html  101.html  1010.html  1011.html  1012.html  1013.html  1014.html  1015.html  1016.html  1017.html  1018.html  1019.html  102.html  1020.html  1021.html  1022.html  1023.html  1024.html  1025.html  1026.html  1027.html  1028.html  1029.html  103.html  1030.html  1031.html  1032.html  1033.html  (+1618 more)
timetables/: 1.csv  10.csv  100.csv  1000.csv  1001.csv  1002.csv  1003.csv  1004.csv  1005.csv  1006.csv  1007.csv  1008.csv  1009.csv  101.csv  1010.csv  1011.csv  1012.csv  1013.csv  1014.csv  1015.csv  1016.csv  1017.csv  1018.csv  1019.csv  102.csv  1020.csv  1021.csv  1022.csv  1023.csv  1024.csv  1025.csv  1026.csv  1027.csv  1028.csv  1029.csv  103.csv  1030.csv  1031.csv  1032.csv  1033.csv  (+1618 more)
